sys/dev/cxgbe/t4_main.c
@@ -45938,6 +45938,8 @@ name|reg
 operator|==
 name|A_TP_KEEP_IDLE
 operator|||
+name|reg
+operator|==
 name|A_TP_KEEP_INTVL
 operator|||
 name|reg
